--- a/pom.xml
+++ b/pom.xml
@@ -567,6 +567,14 @@
 					<skip>${skip_maven_deploy}</skip>
 				</configuration>
 			</plugin>
+			<!-- 编译跳过测试 -->
+			  <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-surefire-plugin</artifactId>
+		        <configuration>
+		          <skip>true</skip>
+		        </configuration>
+		      </plugin>
 		</plugins>
 
 		<pluginManagement>
